# alphazero-risk

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
examples/: train.cc
libs/cxxopts/: cxxopts.h
libs/imgui/: imgui_demo.cpp  imgui_widgets.cpp  stb_image.h
python/log/: azr-benchmark-log.txt  azr-improvement-log.txt  azr-nn-training-log.txt  batch-size-perf.txt  nn-20-sr.txt  nn-20-ss.txt  nn-5-sr.txt  nn-5-ss.txt  results-old.txt  results-short-old.txt  results-short.txt
python/model/: model_bin_V1_5.pb  model_bin_V2_5.pb  model_bin_V3_5.pb  model_txt_V1_5.pb  model_txt_V2_5.pb  model_txt_V3_5.pb
python/src/: build_graph.py  log_chart.py
src/: alphazero_risk.cpp  alphazero_risk.h  log.h  rng.h  settings.h
src/risk_game/board/: board_gui.cpp  board_gui.h
src/risk_game/game/: game.cpp  game.h
src/risk_game/land/: land.cpp  land.h  land_index.h  land_set.cpp  land_set.h
src/risk_game/player/: game_helper.cpp  game_helper.h
src/risk_game/player/alpha_zero/: alphazero_mcts.cpp  alphazero_mcts.h  alphazero_moves.cpp  alphazero_moves.h  alphazero_player.cpp  alphazero_player.h  alphazero_trainer.cpp  alphazero_trainer.h
src/risk_game/player/alpha_zero/neural_network/: alphazero_gpu_cluster.cpp  alphazero_gpu_cluster.h  alphazero_nn.cpp  alphazero_nn.h  alphazero_nn_data.cpp  alphazero_nn_data.h
src/risk_game/player/base/: player.cpp  player.h
src/risk_game/player/random/: random_player.cpp  random_player.h
src/risk_game/player/script/: script_player.cpp  script_player.h
src/risk_game/state/: state.cpp  state.h
